working more on the simulator, trying new things, haven't gotten anywhere

--- a/simulator_config/joystick_config.properties
+++ b/simulator_config/joystick_config.properties
@@ -1,6 +1,6 @@
 #
-#Tue May 19 20:53:05 EDT 2020
-Joystick_1=Controller (Gamepad F310) 1---com.snobot.simulator.joysticks.joystick_specializations.XboxJoystick
+#Fri May 22 20:31:30 EDT 2020
+Joystick_1=Controller (Gamepad F310) 1---com.snobot.simulator.joysticks.joystick_specializations.GenericGamepadJoystick
 Joystick_2=Null Joystick---null
 Joystick_0=Null Joystick---null
 Joystick_5=Null Joystick---null
